--- a/CSS/dark.css
+++ b/CSS/dark.css
@@ -106,6 +106,13 @@
 .dark .mega-menu .links>li::before {
     background-color: var(--hover);
 }
+.dark .header .nav li>a:last-child::before{
+    background-color: transparent;
+}
+
+.dark .header .nav li>a:last-child:hover{
+    background-color: transparent;
+}
 
 .dark .articles .container .box {
     background-color: var(--sction-background);
