--- a/CSS/store.css
+++ b/CSS/store.css
@@ -268,6 +268,13 @@ ul {
 .mega-menu .links li:hover::before {
     width: 100%;
 }
+.header .nav li>a:last-child::before{
+    background-color: transparent;
+}
+
+.header .nav li>a:last-child:hover{
+    background-color: transparent;
+}
 
 /* end headre*/
 
